--- a/src/oui/partials/trumps/_type.scss
+++ b/src/oui/partials/trumps/_type.scss
@@ -161,6 +161,10 @@
   white-space: nowrap !important;
 }
 
+.wrap {
+  white-space: normal !important;
+}
+
 /// Text
 /// @description Adjust block and inline.
 /// @example[html]
