Tiny documentation improvements.

--- a/src/oui/partials/objects/_buttons.scss
+++ b/src/oui/partials/objects/_buttons.scss
@@ -197,7 +197,7 @@
     }
   }
 
-  // ### Button Sizes
+  // Button Sizes
   // Button size variations.
 
   &--small {
@@ -235,7 +235,7 @@
     text-align: center;
   }
 
-  // ### With Icon
+  // With Icon
   // Some extra help is needed to get the icon and text to line up.
 
   &--icon {
@@ -246,10 +246,7 @@
     }
   }
 
-  // ### Disabled State
-  // Used either an attribute or a class, depending on the use case.
-
-  // ### Disabled State
+  // Disabled State
   // Used either an attribute or a class, depending on the use case.
 
   &[disabled],
