add token and badge partials from v2 with some slight modifications for namespace etc

--- a/src/oui/_oui-partials.scss
+++ b/src/oui/_oui-partials.scss
@@ -48,6 +48,7 @@
 @import 'partials/components/accordion';
 @import 'partials/components/arrows-inline';
 @import 'partials/components/attention';
+@import 'partials/components/badge';
 @import 'partials/components/block-list';
 @import 'partials/components/dialog';
 @import 'partials/components/disclose';
@@ -67,3 +68,4 @@
 @import 'partials/components/stats';
 @import 'partials/components/steps';
 @import 'partials/components/tabs';
+@import 'partials/components/token';
