--- a/src/oui/partials/components/_badge.scss
+++ b/src/oui/partials/components/_badge.scss
@@ -29,7 +29,7 @@
     font-size: 10px;
     padding: 0 5px;
     font-weight: 700;
-    letter-spacing: .5px;
+    letter-spacing: 0.5px;
     text-transform: uppercase;
 
     &.badge__draft {
