--- a/src/oui/partials/components/_token.scss
+++ b/src/oui/partials/components/_token.scss
@@ -46,7 +46,7 @@
   color: map-fetch($color, text, white);
   line-height: 1;
   padding: spacer(0.5) spacer(1);
-  border-radius: 2px;
+  border-radius: map-fetch($token, border-radius);
   text-shadow: map-fetch($token, text-shadow);
 }
 
@@ -71,14 +71,13 @@
 .#{$namespace}token__number {
   color: map-fetch($color, text, light);
   font-size: map-fetch($font, size, milli);
-  min-width: 10px;
+  min-width: map-fetch($token, token__number, min-width);
 }
 
 .#{$namespace}token__move {
   transform: rotate(90deg);
 
   color: darken(map-fetch($color, ui, base), 10);
-  margin-left: -2px;
 }
 
 .#{$namespace}token__description {
@@ -88,6 +87,6 @@
 
 .#{$namespace}token__close {
   color: map-fetch($color, ui, white);
-  height: 12px;
-  width: 12px;
+  height: map-fetch($token, token__close, height);
+  width: map-fetch($token, token__close, width);
 }
