--- a/src/oui/partials/components/_token.scss
+++ b/src/oui/partials/components/_token.scss
@@ -3,26 +3,26 @@
 /// @group Components
 /// @description Tokens are used to denote which items you’ve selected from a multi-select list.
 /// @example[html] secondary
-///   <div class="#{$namespace}token-wrap">
-///     <div class="#{$namespace}token #{$namespace}token--secondary">Experiment Page Title</div>
+///   <div class="oui-token-wrap">
+///     <div class="oui-token oui-token--secondary">Experiment Page Title</div>
 ///   </div>
 /// @example[html] primary
-///   <div class="#{$namespace}token-wrap">
-///     <div class="#{$namespace}token #{$namespace}token--primary">
+///   <div class="oui-token-wrap">
+///     <div class="oui-token oui-token--primary">
 ///       <span class="push--right">Experiment Page Title</span>
 ///       <a class="flex">
-///         <svg class="#{$namespace}icon #{$namespace}token__close">
+///         <svg class="oui-icon oui-token__close">
 ///           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close-16"></use>
 ///         </svg>
 ///       </a>
 ///     </div>
 ///   </div>
 /// @example[html] primary
-///   <div class="#{$namespace}token-wrap">
-///     <div class="#{$namespace}token #{$namespace}token--primary">
+///   <div class="oui-token-wrap">
+///     <div class="oui-token oui-token--primary">
 ///       <span class="push--right">Experiment Page Title</span>
 ///       <a class="flex">
-///         <svg class="#{$namespace}icon #{$namespace}token__close">
+///         <svg class="oui-icon oui-token__close">
 ///           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close-16"></use>
 ///         </svg>
 ///       </a>
@@ -30,7 +30,8 @@
 ///   </div>
 ////
 
-.#{$namespace}token-wrap {
+.#{$namespace}token-wrap,
+.oui-token-wrap {
   display: inline-flex;
   border: 1px solid map-fetch($color, ui, base);
   background: map-fetch($color, background, light);
@@ -38,7 +39,8 @@
   border-radius: map-fetch($token, border-radius);
 }
 
-.#{$namespace}token {
+.#{$namespace}token,
+.oui-token {
   display: inline-flex;
   align-items: center;
   color: map-fetch($color, text, white);
@@ -48,15 +50,18 @@
   text-shadow: map-fetch($token, text-shadow);
 }
 
-.#{$namespace}token--primary {
+.#{$namespace}token--primary,
+.oui-token--primary {
   background: map-fetch($token, background-color, primary);
 }
 
-.#{$namespace}token--secondary {
+.#{$namespace}token--secondary,
+.oui-token--secondary {
   background: map-fetch($token, background-color, secondary);
 }
 
-.#{$namespace}token-tool {
+.#{$namespace}token-tool,
+.oui-token-tool {
   display: flex;
   align-items: center;
   cursor: move;
@@ -66,23 +71,27 @@
   padding-left: map-fetch($token, padding) * 2;
 }
 
-.#{$namespace}token__number {
+.#{$namespace}token__number,
+.oui-token__number {
   color: map-fetch($color, text, light);
   font-size: map-fetch($font, size, milli);
   min-width: map-fetch($token, token__number, min-width);
 }
 
-.#{$namespace}token__move {
+.#{$namespace}token__move,
+.oui-token__move {
   transform: rotate(90deg);
   color: darken(map-fetch($color, ui, base), 10);
 }
 
-.#{$namespace}token__description {
+.#{$namespace}token__description,
+.oui-token__description {
   font-size: map-fetch($font, size, micro);
   margin-top: spacer(0.5);
 }
 
-.#{$namespace}token__close {
+.#{$namespace}token__close,
+.oui-token__close {
   color: map-fetch($color, ui, white);
   height: map-fetch($token, token__close, height);
   width: map-fetch($token, token__close, width);
